# comfyui-structured-outputs

./: .env.example  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: comfyui_publish.yml
comfyui_structured_outputs/: attribute_utils.py
comfyui_structured_outputs/utils/: image_utils.py  loggable.py  utils.py
comfyui_structured_outputs/utils/scripts/: generate_requirements_txt.py
docs/: development.md  docs.md
example_workflows/: describe_image_parts.json
nodes/: attribute.py  attribute_to_text.py  structured_output.py
tests/: conftest.py  test_attribute_utils.py  test_image_utils.py  test_utils.py
